logs/pyonewire.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyonewire'...
Listing './lib/python3.5/site-packages/pyonewire/core'...
Compiling './lib/python3.5/site-packages/pyonewire/core/util.py'...
***   File "./lib/python3.5/site-packages/pyonewire/core/util.py", line 3
    raise ValueError, "Tuple must consist of 8 integers"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyonewire/master'...
Compiling './lib/python3.5/site-packages/pyonewire/master/GenericOneWireMaster.py'...
***   File "./lib/python3.5/site-packages/pyonewire/master/GenericOneWireMaster.py", line 157
    last_rn = 0L
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyonewire/master/ds2490.py'...
***   File "./lib/python3.5/site-packages/pyonewire/master/ds2490.py", line 156
    print '%s> %s' % (pad, fn.__name__)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyonewire-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
